# AIISRFE

./: README.md  environment.yml
data/scale_mat/: childroom.txt  gibson_Convoy.txt  gibson_Rosser.txt  hm3d_00804.txt  hm3d_00829.txt  hm3d_00883.txt  room.txt
monosdfServer_unity/: childroom_im_grids.conf  gibson_Convoy_im_grids.conf  hm3d_00804_im_grids.conf  hm3d_00829_im_grids.conf  hm3d_00848_im_grids.conf  interface2.py  monosdf_renderall.py  test_scripts.py
monosdfServer_unity/core/: common.py  extract_monocular_cues.py  monosdf.py  views.py
monosdfServer_unity/core/__pycache__/: views.cpython-37.pyc.140115515276720
monosdfServer_unity/core/datasets/: scene_dataset.py
monosdfServer_unity/core/hashencoder/: hashgrid.py
monosdfServer_unity/core/hashencoder/src/: hashencoder.h
monosdfServer_unity/core/model/: density.py  loss.py  network.py  ray_sampler.py
monosdfServer_unity/core/modules/midas/: vit.py
monosdfServer_unity/core/utils/: plots.py  rend_util.py
monosdfServer_unity/nerfServer/: settings.py  urls.py
monosdfServer_unity/render/: common.py  extract_monocular_cues.py  monosdf_forrender.py
monosdfServer_unity/render/datasets/: scene_dataset.py
monosdfServer_unity/render/hashencoder/src/: hashencoder.cu
monosdfServer_unity/render/model/: density.py  loss.py  network.py  ray_sampler.py
monosdfServer_unity/render/utils/: general.py  plots.py  rend_util.py
monosdfServer_unity/tmp_build/: .ninja_deps  .ninja_log  build.ninja
src/: .gitignore
src/fuel_planner/active_perception/: CMakeLists.txt  package.xml
src/fuel_planner/active_perception/include/active_perception/: frontier_finder.h  graph_node.h  perception_utils.h  surface_finder.h
src/fuel_planner/active_perception/resource/: single.par  single.tsp  single.txt
src/fuel_planner/active_perception/src/: frontier_finder.cpp  graph_node.cpp  perception_utils.cpp  surface_finder.cpp
src/fuel_planner/bspline_opt/: CMakeLists.txt
src/fuel_planner/exploration_manager/: CMakeLists.txt
src/fuel_planner/exploration_manager/include/exploration_manager/: expl_data.h  fast_exploration_fsm.h  fast_exploration_manager.h  test.h
src/fuel_planner/exploration_manager/launch/: algorithm_multi_room.xml  exploration_multi_room.launch
src/fuel_planner/exploration_manager/src/: exploration_node.cpp  fast_exploration_fsm.cpp  fast_exploration_manager.cpp  fast_exploration_manager_evpp.cpp  fast_exploration_manager_fuel.cpp  fast_exploration_manager_fuel_star.cpp  fast_exploration_manager_rec.cpp  fast_exploration_manager_vpp.cpp  fast_exploration_manager_woswitch.cpp  test.cpp  test_bk.cpp  test_evpp.cpp
src/fuel_planner/path_searching/include/path_searching/: astar2.h
src/fuel_planner/path_searching/src/: astar2.cpp
src/fuel_planner/plan_env/include/plan_env/: map_ros.h
src/fuel_planner/plan_env/src/: map_ros.cpp  raycast.cpp  sdf_map.cpp
src/fuel_planner/plan_manage/config/: traj.rviz
src/fuel_planner/plan_manage/src/: traj_server.cpp
src/fuel_planner/utils/lkh_tsp_solver/resource/: single.par  single.tsp  single.txt
src/uav_simulator/local_sensing/: CMakeLists.txt
